fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -367,6 +367,9 @@ footer li {
   font-size: 16px;
   margin: 1em 0;
 }
+.activites {
+  margin-top: 35px;
+}
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
@@ -400,7 +403,8 @@ footer li {
     font-size: 14px;
   }
 
-  .populaires-cards .card-subtitle {
+  .populaires-cards .card-subtitle,
+  .populaires-cards .card-subtitle span {
     font-size: 13px;
   }
 
@@ -416,9 +420,6 @@ footer li {
   }
   .filter-bar h2 {
     flex-basis: 100%;
-  }
-  .activites {
-    margin-top: 35px;
   }
 }
 
